--- a/tmux_scripts/simulation_scripts/one_drone_gps/session.yml
+++ b/tmux_scripts/simulation_scripts/one_drone_gps/session.yml
@@ -1,6 +1,5 @@
 name: simulation
 root: ./
-
 startup_window: status
 pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f550; export ODOMETRY_TYPE=gps
 windows:
@@ -27,13 +26,10 @@ windows:
   - takeoff:
       layout: even-vertical
       panes:
-        #{ uav1
+        - waitForRos; roslaunch mrs_general automatic_start.launch
         - 'waitForControl;
-          rosservice call /$UAV_NAME/control_manager/motors 1;
           rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-          rosservice call /$UAV_NAME/uav_manager/takeoff'
-        #}
+          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
   - goto:
       layout: even-vertical
       panes:
@@ -57,9 +53,9 @@ windows:
       layout: even-vertical
       panes:
         - waitForOdometry; gz camera -c gzclient_camera -f uav1; history -s gz camera -c gzclient_camera -f uav1
-        - waitForControl; sleep 2; ~/.i3/layout_manager.sh layout.json
+        - waitForControl; sleep 3; ~/.i3/layout_manager.sh layout.json
   - rviz:
       layout: even-vertical
       panes:
-        - waitForControl; roslaunch mrs_testing rviz_uav1.launch
-        - waitForControl; roslaunch mrs_rviz_plugins load_f550_robot.launch
+        - waitForControl; roslaunch mrs_testing rviz.launch
+        - waitForControl; roslaunch mrs_rviz_plugins load_robot.launch
