--- a/.gitman.yml
+++ b/.gitman.yml
@@ -18,3 +18,12 @@ sources:
   link: ros_packages/example_ros_vision
   scripts:
   - git submodule update --init --recursive
+- name: example_ros_pluginlib
+  type: git
+  repo: git@github.com:ctu-mrs/example_ros_pluginlib.git
+  sparse_paths:
+  -
+  rev: master
+  link: ros_packages/example_ros_pluginlib
+  scripts:
+  - git submodule update --init --recursive
