--- a/tmux_scripts/waypoint_flier/session.yml
+++ b/tmux_scripts/waypoint_flier/session.yml
@@ -1,7 +1,7 @@
 name: simulation
 root: ./
 startup_window: status
-pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f550; export ODOMETRY_TYPE=gps
+pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f550; export ODOMETRY_TYPE=gps; export SENSORS="garmin_down"
 windows:
   - roscore:
       layout: even-vertical
