--- a/.gitman.yml
+++ b/.gitman.yml
@@ -6,9 +6,9 @@ sources:
     type: git
     sparse_paths:
       -
-    link: ros_packages/example_ros_pluginlib
     links:
-      -
+      - source: ''
+        target: ros_packages/example_ros_pluginlib
     scripts:
       - git submodule update --init --recursive
   - repo: https://github.com/ctu-mrs/example_ros_uav.git
@@ -17,9 +17,9 @@ sources:
     type: git
     sparse_paths:
       -
-    link: ros_packages/example_ros_uav
     links:
-      -
+      - source: ''
+        target: ros_packages/example_ros_uav
     scripts:
       - git submodule update --init --recursive
   - repo: https://github.com/ctu-mrs/example_ros_vision.git
@@ -28,45 +28,8 @@ sources:
     type: git
     sparse_paths:
       -
-    link: ros_packages/example_ros_vision
     links:
-      -
+      - source: ''
+        target: ros_packages/example_ros_vision
     scripts:
       - git submodule update --init --recursive
-sources_locked:
-  - repo: https://github.com/ctu-mrs/example_ros_pluginlib.git
-    name: example_ros_pluginlib
-    rev: b566f9b9cef82f1f69508fd45b59e63c8a27b817
-    type: git
-    sparse_paths:
-      -
-    link: ros_packages/example_ros_pluginlib
-    links:
-      -
-    scripts:
-      - git submodule update --init --recursive
-  - repo: https://github.com/ctu-mrs/example_ros_uav.git
-    name: example_ros_uav
-    rev: dda7af95d86b2d4164b7c066fb0054882fe32e0b
-    type: git
-    sparse_paths:
-      -
-    link: ros_packages/example_ros_uav
-    links:
-      -
-    scripts:
-      - git submodule update --init --recursive
-  - repo: https://github.com/ctu-mrs/example_ros_vision.git
-    name: example_ros_vision
-    rev: 06d47b4f51a1e1fc46604a7dff2087e4911c2cc1
-    type: git
-    sparse_paths:
-      -
-    link: ros_packages/example_ros_vision
-    links:
-      -
-    scripts:
-      - git submodule update --init --recursive
-default_group: ''
-groups:
-  -
