--- a/.gitman.yml
+++ b/.gitman.yml
@@ -4,6 +4,7 @@ sources:
     name: example_ros_pluginlib
     rev: master
     type: git
+    params:
     sparse_paths:
       -
     links:
@@ -15,6 +16,7 @@ sources:
     name: example_ros_uav
     rev: master
     type: git
+    params:
     sparse_paths:
       -
     links:
@@ -26,6 +28,7 @@ sources:
     name: example_ros_vision
     rev: master
     type: git
+    params:
     sparse_paths:
       -
     links:
@@ -38,6 +41,7 @@ sources_locked:
     name: example_ros_pluginlib
     rev: b566f9b9cef82f1f69508fd45b59e63c8a27b817
     type: git
+    params:
     sparse_paths:
       -
     links:
@@ -49,6 +53,7 @@ sources_locked:
     name: example_ros_uav
     rev: b32c86338faea2cb9b4bfea143ce3bcb5e1fd9b8
     type: git
+    params:
     sparse_paths:
       -
     links:
@@ -60,6 +65,7 @@ sources_locked:
     name: example_ros_vision
     rev: 1f5614dcace6d535fc36881ba136a7afb68f2d7a
     type: git
+    params:
     sparse_paths:
       -
     links:
