--- a/cpp/waypoint_flier/config/dynparam.cfg
+++ b/cpp/waypoint_flier/config/dynparam.cfg
@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 
-PACKAGE='waypoint_flier'
+PACKAGE='example_waypoint_flier'
 import roslib;
 roslib.load_manifest(PACKAGE)
 
@@ -11,4 +11,4 @@ params = gen.add_group("waypoint_flier parameters");
 
 params.add("waypoint_idle_time", double_t, 1, "The time to wait before flying to the next waypoint", 1, 0, 60);
 
-exit(gen.generate(PACKAGE, "waypoint_flier", "dynparam"))
+exit(gen.generate(PACKAGE, "example_waypoint_flier", "dynparam"))
