--- a/cpp/waypoint_flier/config/dynparam.cfg
+++ b/cpp/waypoint_flier/config/dynparam.cfg
@@ -7,7 +7,7 @@ roslib.load_manifest(PACKAGE)
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator();
-params = gen.add_group("waypoint_flier parameters");
+params = gen.add_group("example_waypoint_flier parameters");
 
 params.add("waypoint_idle_time", double_t, 1, "The time to wait before flying to the next waypoint", 1, 0, 60);
 
