--- a/cpp/waypoint_flier/tmux/session.yml
+++ b/cpp/waypoint_flier/tmux/session.yml
@@ -6,7 +6,7 @@ attach: false
 tmux_options: -f /etc/ctu-mrs/tmux.conf
 # you can modify these
 pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=x500
-startup_window: waypointflier
+startup_window: example_waypoint_flier
 windows:
   - roscore:
       layout: tiled
@@ -37,13 +37,13 @@ windows:
           custom_config:=./config/custom_config.yaml
           world_config:=./config/world_config.yaml
           network_config:=./config/network_config.yaml
-  - waypointflier:
+  - example_waypoint_flier:
       layout: tiled
       panes:
-        - waitForControl; roslaunch example_waypoint_flier waypoint_flier.launch
-        - 'history -s rosservice call /$UAV_NAME/waypoint_flier/fly_to_first_waypoint'
-        - 'history -s rosservice call /$UAV_NAME/waypoint_flier/start_waypoints_following'
-        - 'history -s rosservice call /$UAV_NAME/waypoint_flier/stop_waypoints_following'
+        - waitForControl; roslaunch example_waypoint_flier example_waypoint_flier.launch
+        - 'history -s rosservice call /$UAV_NAME/example_waypoint_flier/fly_to_first_waypoint'
+        - 'history -s rosservice call /$UAV_NAME/example_waypoint_flier/start_waypoints_following'
+        - 'history -s rosservice call /$UAV_NAME/example_waypoint_flier/stop_waypoints_following'
   - rviz:
       layout: tiled
       panes:
