--- a/cpp/waypoint_flier/config/example_waypoint_flier.yaml
+++ b/cpp/waypoint_flier/config/example_waypoint_flier.yaml
@@ -13,6 +13,9 @@ land_at_the_end: false
 # how long should the UAV idle at a waypoint?
 waypoint_idle_time: 1.0
 
+# how close should the uav get to the waypoint before considering it reached?
+waypoint_desired_distance: 0.3
+
 # matrix of waypoints which will be flown through by the UAV
 # x [m], y [m], z [m], heading [rad]
 waypoints: [-10, -10, 3, 0,
